# watsonx-medical-mcp-server

./: .env.template  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  backend.py  chatbot-cli.py  chatbot.py  client.py  frontend.py  pyproject.toml  requirements.txt  server.py  test_client.py
.github/workflows/: python-app.yml
docs/: README.md
scripts/: install_python3.11.sh  install_python3.12.sh
static/: sw.js
templates/: base.html  chat.html  error.html
test/: test_client.py  test_local.py  test_local_server.py  test_server.py
test/backup/: test_local_server.py  test_remote_server.py
